; ModuleID = '/home/carl/AnghaBench/git/extr_imap-send.c_auth_cram_md5.c'
source_filename = "/home/carl/AnghaBench/git/extr_imap-send.c_auth_cram_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.imap_store = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }
%struct.imap_cmd = type { i32 }

@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@.str = private unnamed_addr constant [36 x i8] c"IMAP error: sending response failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.imap_store*, %struct.imap_cmd*, i8*)* @auth_cram_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @auth_cram_md5(%struct.imap_store* %0, %struct.imap_cmd* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.imap_store*, align 8
  %6 = alloca %struct.imap_cmd*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.imap_store* %0, %struct.imap_store** %5, align 8
  store %struct.imap_cmd* %1, %struct.imap_cmd** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 1), align 4
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 4
  %13 = call i8* @cram(i8* %10, i32 %11, i32 %12)
  store i8* %13, i8** %9, align 8
  %14 = load %struct.imap_store*, %struct.imap_store** %5, align 8
  %15 = getelementptr inbounds %struct.imap_store, %struct.imap_store* %14, i32 0, i32 0
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i8*, i8** %9, align 8
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @strlen(i8* %20)
  %22 = call i32 @socket_write(i32* %18, i8* %19, i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = load i8*, i8** %9, align 8
  %25 = call i32 @strlen(i8* %24)
  %26 = icmp ne i32 %23, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %3
  %28 = call i32 @error(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  store i32 %28, i32* %4, align 4
  br label %32

29:                                               ; preds = %3
  %30 = load i8*, i8** %9, align 8
  %31 = call i32 @free(i8* %30)
  store i32 0, i32* %4, align 4
  br label %32

32:                                               ; preds = %29, %27
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}

declare dso_local i8* @cram(i8*, i32, i32) #1

declare dso_local i32 @socket_write(i32*, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @error(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
